welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: type mismatch;
 found   : Int(10)
 required: Boolean
	if(a<b<10) {
               ^close10:5: error: type mismatch;
 found   : Int(10)
 required: Boolean
	if(b<a<10) {
               ^close10:8: error: type mismatch;
 found   : Int(10)
 required: Boolean
	if(a>b>10) {
               ^close10:11: error: type mismatch;
 found   : Int(10)
 required: Boolean
	if(b>a>10) {
               ^close10:14: error: reassignment to val
	if(a=b) {
            ^close10:14: error: type mismatch;
 found   : Unit
 required: Int
	if(a=b) {
        ^